WR44476: Add padding to navbar and fix footer alignment

--- a/src/themes/showcases/app/footer/footer.component.scss
+++ b/src/themes/showcases/app/footer/footer.component.scss
@@ -19,6 +19,19 @@
 
 /*Layout changes on screen width 700px*/
 @media(max-width: 700px) {
+ #showcase_footer {
+   display: block;
+ }
+
+ #showcase_footer_info, #showcase_footer_auth {
+   margin-left: 20%;
+ }
+
+ .loginLink { /* this isn't working yet */
+   padding-left: 0px;
+   color: #fff;
+ }
+
  .showcase_footer_elements {
    flex: 1 0 100%;
  }
